Prefix variables with _ to silence recent jhbuild warning
The variables that are "official" ones (to override or set in custom
jhbuildrc files) are now prefixed with _gtk_osx_.

--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -8,7 +8,7 @@
 # Copy it or symlink it into ~/.jhbuildrc-cfw-10.4
 #
 
-prompt_prefix = "*CFW*"
+_gtk_osx_prompt_prefix = "*CFW*"
 
 modules = [
          "meta-gtk-osx-bootstrap",
@@ -22,11 +22,11 @@ modules = [
 
 # Source and installation locations.
 #
-root = os.path.expanduser("~/Source/create-gtk-fw")
-checkoutroot = os.path.join(root, "source")
-prefix = os.path.join(root, "inst")
+_root = os.path.expanduser("~/Source/create-gtk-fw")
+checkoutroot = os.path.join(_root, "source")
+prefix = os.path.join(_root, "inst")
 
-sdkdir = setup_sdk_10_4()
+_sdkdir = setup_sdk_10_4()
 
 # Needed to get the various sublibraries to find and use the same
 # symbols.
@@ -36,7 +36,7 @@ environ_append('LDFLAGS', '-Wl,-flat_namespace')
 # Need to point some modules to the right place so we don't pick up
 # things from /usr/lib.
 #
-append_autogenargs("gettext", "--with-libiconv-prefix=" + sdkdir + "/usr")
+append_autogenargs("gettext", "--with-libiconv-prefix=" + _sdkdir + "/usr")
 
 # For unknown reasons, iconv is not picked up correctly without this
 # (possibly due to using -flat_namespace....).
