Set tags for pygobject and pygtk

--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -55,6 +55,11 @@ set_branch("intltool", "tags/INTLTOOL_0_40_4")
 set_branch("gnome-icon-theme", "tags/GNOME_ICON_THEME_2_24_0")
 # Try if this is new enough: set_branch("gtk-doc", "tags/GTK_DOC_1_10")
 
+# Python modules.
+#
+set_branch("pygobject", "tags/PYGOBJECT_2_14_2")
+set_branch("pygtk", "tags/PYGTK_2_12_1")
+
 # Skip those for now.
 #
 skip.append("gst-plugins-ugly")
