Ski gettext in the bootstrap, it's build as part of glib framework now

--- a/jhbuildrc-gtk-osx-cfw-10.4
+++ b/jhbuildrc-gtk-osx-cfw-10.4
@@ -69,6 +69,7 @@ skip.append("faad")
 
 # We build those as frameworks instead.
 #
+skip.append("gettext")
 skip.append("glib")
 skip.append("pango")
 skip.append("atk")
